# pgcopy-standalone

./: .pre-commit-config.yaml  docker-compose.yml  pyproject.toml
.circleci/: config.yml
tests/: benchmark.py  conftest.py  copy_manager.py  test_datatypes.py  test_errors.py  test_sanity.py  test_schema.py  test_stringio.py
